webview: Fix webview flickering [WIP].

--- a/app/renderer/css/main.css
+++ b/app/renderer/css/main.css
@@ -249,27 +249,28 @@ body {
 }
 
 webview {
-    opacity: 1;
     /* transition: opacity 0.3s ease-in; */
     flex-grow: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 webview.onload {
     transition: opacity 1s cubic-bezier(0.95, 0.05, 0.795, 0.035);
 }
 
+webview.active {
+    opacity: 1;
+    visibility: visible;
+}
+
 webview.disabled {
-    flex: 0 1;
-    height: 0;
-    width: 0;
     opacity: 0;
-    transition: opacity 0.3s ease-out;
 }
-
-webview:focus {
-    outline: 0px solid transparent;
-}
-
 
 /* Tooltip styling */
 
